--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta property="og:title" content="Rick and Morty"/>
+    <meta property="og:description" content="Rick and Morty "/>
+    <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSyXYo6qnN0XHkimy05GuOT7hKRUUF2VTjACA&s"/>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rick and Morty</title>
   </head>
